--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -194,11 +194,11 @@
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
         <div class="p-3">
-            <h5>Notificari</h5>
+            <h5>Taskuri</h5>
             <p class="d-none">subtitle</p>
         </div>
         {% for pendingTimeOff in loggedUser.getResponsibleForUserTimeOffs %}
-            <div class="p-3">
+            <div class="p-3 border-top">
                 <a href="/time-off/review/{{ pendingTimeOff.id }}">
                     <!-- Message Start -->
                     <div class="media">
