--- a/src/main/resources/templates/timeOff/reviewUserTimeOffLogList.twig
+++ b/src/main/resources/templates/timeOff/reviewUserTimeOffLogList.twig
@@ -35,7 +35,7 @@
             }
         });
 
-        $('#userTimeOffLogList tbody').on('dblclick', 'tr', function () {
+        $('#userTimeOffLogList tbody').on('click', 'tr', function () {
             var data = table.row(this).data();
 
             window.location.href = "/time-off/review/" + parseInt(data[0]);
