--- a/src/main/resources/templates/user/userList.twig
+++ b/src/main/resources/templates/user/userList.twig
@@ -29,7 +29,7 @@
             }
         });
 
-        $('#usersList tbody').on('dblclick', 'tr', function () {
+        $('#usersList tbody').on('click', 'tr', function () {
             var data = table.row(this).data();
 
             window.location.href = "/user/info/" + parseInt(data[0]);
